# jobos-4

./: .env.example  .gitignore  AXIOM_MAP.md  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_job_metrics.py  002_add_experience_versions.py  003_add_baseline_switch.py  004_add_temporal_and_choice_set.py  005_add_context_graph_tables.py  006_add_hierarchy_versions.py
decisions/: 2026-05-07-gemini-research-decisions.md
frontend/: package-lock.json  package.json
frontend/public/: demo-storyboard.html  sample-job-hierarchy.json
pilots/: pilot_001_b2b_saas_churn.yaml  pilot_002_enterprise_onboarding.yaml
pilots/erp-opc/: AGENT_GUIDE.md  SHARING_AND_DEMO.md  constraints.json  demo.html  hierarchy.json  routes.py  seed_pilot.py  service.py  test_e2e.py
scripts/: create_tables.py  expand_crosswalk.py  seed_managerial_catalog.py  seed_pilots.py  seed_sap_demo.py
spec/: jobos-ai-spec.json
src/jobos/: config.py
tests/integration/: test_identify_define_decide.py  test_pilot_integration.py  test_red_team.py  test_service_integration.py
tests/unit/: test_approval.py  test_auth.py  test_axioms.py  test_baseline_service.py  test_bulk_ingestor.py  test_causal_discovery.py  test_context_enrichment.py  test_context_freshness.py  test_context_ingestion.py  test_context_service.py  test_correlation_id.py  test_csv_parser.py  test_customer_perspective.py  test_db_sync.py  test_decision_service.py  test_decision_trace.py  test_dedup.py  test_entity_service.py  test_experience_service.py  test_experiment_service.py  test_foundational_axioms.py  (+28 more)
(+144 files in other folders)
